Fixed scrolling and position: fixed issue - see http://stackoverflow.com/questions/12969228/chrome-slow-scrolling-with-fixed-position-elements

--- a/assets/sass/partial/_application.scss
+++ b/assets/sass/partial/_application.scss
@@ -9,7 +9,7 @@ html, body {
     }
     .js {
         @include opacity(1);
-        @include single-transition();
+        @include single-transition(opacity, 3s);
     }
 
 .wrapper {
